# starlink-pc-dashboard

./: .gitignore  .gitlab-ci.yml  LICENSE.md  README.md  RELEASE_NOTES.md  pyproject.toml  run_dashboard.bat
_build/: ci_android.yaml  ci_ios.yaml  ci_win32.yaml
_build/reproducible/: 1.0.22a.md  1.1.43a.md  1.1.48a.md  1.1.60a.md  1.1.65a.md  1.1.68a.md  1.1.74a.md  reproducible_builds.md
_misc/: gnss.proto  network.proto  status.proto  telemetron.proto
dashboard/: gnss_pb2.py  gnss_pb2_grpc.py  index.html  network_pb2.py  network_pb2_grpc.py  star_debug_server.py  starlink_pb2.py  starlink_pb2_grpc.py  status_pb2.py  status_pb2_grpc.py  telemetron_pb2.py  telemetron_pb2_grpc.py
star.debug/: README.md  analysis_options.yaml  msg.py  pubspec.yaml
star.debug/android/: .gitignore  settings.gradle
star.debug/ios/: .gitignore
star.debug/lib/: drawer.dart  loading.dart  main.dart
star.debug/lib/channel/: star_channel.dart
star.debug/lib/controller/: conn_controller.dart  dish_log_controller.dart  valkyrie_controller.dart
star.debug/lib/db/: database.dart  database_holder.dart
star.debug/lib/messages/: i18n.dart  messages_uk.i18n.yaml
star.debug/lib/space/: app_data.dart  device_app.dart  entity.dart  obstructions.dart  space_parser.dart
star.debug/linux/: CMakeLists.txt  my_application.cc
star.debug/test/: debug_data_test.dart  geoip_test.dart
star.debug/test_resources/: debug_data_2024.36.0.json  debug_data_v2.json
star.debug/windows/: CMakeLists.txt
tests/: conftest.py  test_path_traversal.py  test_xss_playwright.py
(+36 files in other folders)
